<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="action.eeg.yishi.dogeeg.main.test.TestFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:text="@string/mark3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/mark2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/mark1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/srollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/spinner">

        <TextView
            android:text="@string/not_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />
    </ScrollView>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/type"
        android:id="@+id/spinner"
        android:spinnerMode="dialog"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true" />


</RelativeLayout>
