<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="action.eeg.yishi.dogeeg.main.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:title="@string/app_name"
            android:background="?attr/colorPrimary">
            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/disconnect"
                android:layout_gravity="right"
                android:id="@+id/stateIcon" />
        </android.support.v7.widget.Toolbar>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/linearLayout"
            android:orientation="horizontal"
            android:background="@drawable/bottom_bg"
            >
            <action.eeg.yishi.dogeeg.utils.BottomView
                android:id="@+id/bottom1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:icon="@drawable/test"
                app:color="#43CD80"
                app:text="@string/test"
                app:textSize="12sp"
                android:padding="5dp"
                />
            <action.eeg.yishi.dogeeg.utils.BottomView
                android:id="@+id/bottom2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:icon="@drawable/eeg"
                app:color="#43CD80"
                app:text="@string/show"
                app:textSize="12sp"
                android:padding="5dp"
                />

        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/activity_main_navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>